SONAR-13579 Overall coverage improvements